[tool.poetry]
name = "robot-framework-cross-browser"
version = "0.1.0"
description = ""
authors = ["shazi7804@gmail.com"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7 || ^3.8"
toml = "^0.9"
requests = { version = "^2.23.0", extras = [ "security" ] }
selenium = "^3.141.0"
robotframework = "^3.2.1"
robotframework-seleniumlibrary = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
pytest-cov = "^2.7"

[tool.black]
line-length=110

[build-system]
requires = ["poetry >= 0.12, <1"]
build-backend = "poetry.masonry.api"